@startuml initipin

entity Lokasi{
    * id : number <<generated>>
    ---
    nama : string
    deskripsi : text
    alamat : text
    lat : number
    lng : number
    tipe : number (1=pondok, 2 produk)
    foto : string
    link_google_maps : string
    * id_kecamatan : string <<FK>>
    * id_kelurahan : string <<FK>>
}

entity Pondok{
    * id : number <<generated>>
    ---
    id_lokasi : number <<FK>>
}

entity Produk{
    * id : number <<generated>>
    ---
    id_lokasi : number <<FK>>
}

entity Kecamatan{
    * id : string
    ---
    nama
}

entity Kelurahan{
    * id : string
    ---
    nama
    * id_kecamatan : string <<FK>>
}

entity Poligon{
    * id : number <<generated>>
    ---
    lat : number
    lng : number
    * id_kecamatan : string <<FK>>
    * id_kelurahan : string <<FK>>
}

entity Admin{
    * id : number <<generated>>
    ---
    nama : string
    username : string
    password : string
}

entity Setting{
    * name : string
    ---
    value : string
}

entity Gallery{
    * id : number <<generated>>
    ---
    filename : string
}



Lokasi ||--o| Pondok
Lokasi ||--o| Produk
Kecamatan ||--o{ Kelurahan
Kecamatan ||--o{ Lokasi
Kecamatan ||--o{ Poligon
Kelurahan ||--o{ Lokasi
Kelurahan ||--o{ Poligon


@enduml
